--- a/_posts/stories/2018-03-06-san-diego.markdown
+++ b/_posts/stories/2018-03-06-san-diego.markdown
@@ -8,29 +8,27 @@ thumbnail: alla-home.jpg
 tags: ЖизньВСанФранциско Размышления Переезд
 ---
 
-Дорогие мои друзья, за мной должок. В прошлом году мы ездили в самое длинное дорожное приключение, а я до сих пор о нем не рассказала.
+Дорогие мои друзья, за мной должок. В мае прошлого года мы ездили в самое длинное дорожное приключение, а я до сих пор о нем не рассказала.
 Исправляюсь!
 
-Итак, мы поехали в Сан Диего. Сан Диего - это самый южный город Калифорнии. Он находится в 25 км от границы с Мексикой и славится своими пляжами и жаркой погодой. Если ехать без остановок, то дорога от Сан Франциско займет 8 часов. За это время вы преодолеете 500 миль (800 км).
+Итак, мы ездили в Сан Диего. Сан Диего - это самый южный город Калифорнии. Он находится в 25 км от границы с Мексикой и славится своими пляжами и жаркой погодой. Если ехать без остановок, то дорога от Сан Франциско займет 8 часов. За это время вы преодолеете 500 миль (800 км).
 <!--separate--> 
 
-Чтобы не проводить целый день в машине, мы решили переночевать в Лос Анжелесе и на следующий день пойти в парк развлечений Universal Studios, находящийся в Голливуде.
+Чтобы не проводить целый день в машине, мы решили переночевать в Лос Анжелесе, сходить в парк развлечений Universal Studios, находящийся в Голливуде, и только после этого продолжить свой путь.
 
-Знаете, бывают такие детские мечты, которые остаются мечтами, пока их не исполнишь. Когда я приезжала в Америку 7 лет назад, я очень хотела попасть в этот парк. Но тогда я дошла только до входа.
+У многих наверняка есть детские мечты. Когда я приезжала в Америку 7 лет назад, я очень хотела попасть в этот парк. Но тогда у меня была возможность погулять только снаружи парка.
 
-В этот же раз у нас все было по-серьезному. Отель совсем рядом с парком, чтобы можно было не думать о парковке, заранее купленные и распечатанные билеты и боевой настрой успеть покататься на всех аттракционах.
+В этот же раз у нас все получилось. Отель совсем рядом с парком, чтобы можно было не думать о парковке, заранее купленные билеты и боевой настрой покататься на всех аттракционах.
 
 Парк был основан самой старой и известной киностудией в Голливуде 53 года назад. Изначально, идея заключалась в том, чтобы обычные люди могли немного прикоснуться к "миру звезд". То есть походить по студии и посмотреть, где и как снимают мировые бестселлеры.
 Теперь же парк - это не только экскурсия по студии, но и огромное количество аттракционов, кафе, ресторанов, магазинов ... и других способов потратить деньги.
 
-Нам понравилось! Парк определенно того стоит. Самое большое впечатление произвел Studio Tour. Мы проехали по всей студии, оказались на улицах и в метро Нью Йорка, неожиданно начинался дождь и землетрясение. Также "Мир Гарри Поттера" не оставил нас равнодушными. Мы гуляли по замку, ходили по настоящей деревне Hogsmeade и играли в квиддич.
+Нам понравилось! Парк определенно того стоит. Самое большое впечатление произвел Studio Tour. Мы проехали по студии и павильонам, оказались на улицах и в метро Нью Йорка. Неожиданно начинался дождь и землетрясение. Также "Мир Гарри Поттера" не оставил нас равнодушными. Мы гуляли по замку, ходили по настоящей деревне Hogsmeade и играли в квиддич.
 
 Если вы окажетесь в Лос Анжелесе и у вас будет свободный день, подумайте о посещении Universal Studios. А если у вас будут вопросы - пишите!
 
-Из Лос Анжелеса мы продолжили свой путь на юг и к вечеру следующего дня добрались до Сан Диего. Дорога у нас заняла гораздо больше, чем два часа. Мы постоянно останавливались, ведь виды и пляжи были потрясающие. Особенно нам понравился город и пляж Laguna Beach. 
+Из Лос Анжелеса мы продолжили свой путь на юг и, к вечеру следующего дня, добрались до Сан Диего. Дорога у нас заняла целый день только потому, что мы постоянно останавливались. Ведь виды и пляжи были потрясающие. Особенно нам понравился Laguna Beach. 
 
-В Сан Диего, как мы и ожидали, стоит атмосфера спокойствия. В центре города мы оказались только в последний день. Очень хотелось ощущения отпуска. За ним мы поехали 
+В Сан Диего, как мы и ожидали, стоит курортная атмосфера. В центре города мы оказались только в последний день. Небоскребы нас особо не интересовали. Очень хотелось ощущения отпуска. За ним мы поехали На Pacific Beach, а затем в городок La Jolla. 
 
-
-
-
+В Сан-Диего определенно хочется вернуться. Как минимум, на недельку. Чтобы просто проваляться на пляже и вдыхать соленый воздух. И да, мы купались, хоть вода и была достаточно прохладной. Говорят, что к концу лета она сильно нагревается. Надеюсь, нам удастся это проверить!
