--- a/_posts/stories/2018-03-06-san-diego.markdown
+++ b/_posts/stories/2018-03-06-san-diego.markdown
@@ -11,24 +11,24 @@ tags: Океан Путешествия Трасса#1
 Дорогие друзья, за мной должок. В мае прошлого года мы ездили в самое длинное дорожное приключение, а я до сих пор о нём не рассказала.
 Исправляюсь!
 
-Итак, мы ездили в Сан-Диего. Сан-Диего - это самый южный город Калифорнии. Он находится в 25 км от границы с Мексикой и славится пляжами и жаркой погодой. Если ехать без остановок, то дорога от Сан-Франциско займет 8 часов. За это время вы преодолеете 500 миль (800 км).
+Итак, мы ездили в Сан-Диего. Сан-Диего - это самый южный город Калифорнии. Калифорнийцы очень любят ездить туда на мини-каникулы. Ведь там царит настоящая курортная атмосфера. Сан-Диего находится в 25 км от границы с Мексикой и славится пляжами и жаркой погодой. Если ехать без остановок, то дорога от Сан-Франциско займет 8 часов. 
 <!--separate--> 
 
-Чтобы не проводить целый день в машине, мы решили переночевать в Лос-Анжелесе, сходить в парк развлечений Universal Studios, находящийся в Голливуде, и уже после этого продолжить свой путь.
+Чтобы не проводить целый день в машине, мы решили переночевать в Лос-Анжелесе. Сходить в парк развлечений Universal Studios, находящийся в Голливуде, и уже после этого продолжить свой путь.
 
-Когда я приезжала в Америку 7 лет назад, я очень хотела попасть в этот парк. Но тогда мои возможности позволили мне только погулять снаружи парка.
+Когда я приезжала в Америку 7 лет назад, я очень хотела попасть в Universal. Но тогда мои возможности позволили мне только погулять снаружи парка. =) 
 
-В этот же раз мы попали и в сам парк. Мы заранее купили билеты, забронировали отель в пешеходной доступности, чтобы можно было не думать о парковке и, конечно, настроились по-боевому: ye;yj покататься на всех аттракционах.
+В этот же раз мы заранее купили билеты, забронировали отель в пешеходной доступности от парка, чтобы можно было не думать о парковке и, конечно, настроились по-боевому: покататься на всех аттракционах.
 
 Парк был основан одной из старейших и известнейших киностудий в Голливуде 53 года назад. Изначально, идея заключалась в том, чтобы обычные люди могли немного прикоснуться к "миру звезд". То есть походить по студии и посмотреть, где и как снимают мировые бестселлеры.
 Теперь же, парк - это не только экскурсия по студии, но и огромное количество аттракционов, кафе, ресторанов, магазинов ... и других способов потратить деньги.
 
-Нам понравилось! Парк определенно того стоит. Наибольшее впечатление произвел Studio Tour. Мы проехали по студии и павильонам, оказались на улицах и в метро Нью Йорка. Неожиданно начинался дождь и землетрясение. Также "Мир Гарри Поттера" не оставил нас равнодушными. Погуляли по замку, ходили по настоящей деревне Hogsmeade и играли в квиддич.
+Нам понравилось! Парк определенно того стоит. Наибольшее впечатление произвел Studio Tour. Мы проехали по студии и павильонам, оказались на улицах и в метро Нью Йорка. Неожиданно начинался дождь и землетрясение. Я даже пару раз испугалась. "Мир Гарри Поттера" не оставил нас равнодушными. Мы погуляли по замку, ходили по настоящей деревне Hogsmeade и играли в квиддич.
 
-Если вы окажетесь в Лос Анжелесе и у вас будет свободный день, подумайте о посещении Universal Studios. А если будут вопросы - пишите!
+Если вы окажетесь в Лос Анжелесе и у вас будет свободный день, подумайте о посещении Universal Studios. А если возникнут вопросы - пишите! Всегда буду рада помочь.
 
-Из Лос Анжелеса мы продолжили свой путь на юг и, к вечеру следующего дня, добрались до Сан-Диего. Дорога у нас заняла целый день только потому, что мы постоянно останавливались. Ведь виды и пляжи были потрясающие. Особенно понравился Laguna Beach. 
+Из Лос Анжелеса мы продолжили свой путь на юг. К вечеру следующего дня, добрались до Сан-Диего. Дорога у нас заняла целый день только потому, что мы постоянно останавливались. Ведь виды и пляжи были потрясающие. Особенно понравился Laguna Beach. Вы скажете, что мы итак живем у океана и зачем нам вообще нужно куда-то ехать. Во всех маленьких городках, находящихся вдоль океана, дышится по-другому. Там очень спокойно и душевно. Хотя я, конечно, совсем не жалуюсь на Сан-Франциско.
 
-В Сан-Диего, как мы и ожидалось, стоит курортная атмосфера. В центре города мы оказались только в последний день. Небоскребы нас особо не интересовали. Очень хотелось ощущения отпуска. За ним мы поехали на Pacific Beach, а затем в городок La Jolla. 
+В Сан-Диего, как мы и ожидалось, тоже стоит курортная атмосфера. В центре города мы оказались только в последний день. Небоскребы нас не интересовали. Очень хотелось ощущения отпуска. За ним мы поехали на Pacific Beach, а затем в городок La Jolla. 
 
 В Сан-Диего определенно хочется вернуться. Как минимум, на недельку. Чтобы просто проваляться на пляже и подышать соленым воздухом. И да, мы купались, хоть вода и была достаточно прохладной. Говорят, что к концу лета она сильно нагревается. Надеюсь, нам удастся это проверить!
