los angeles fixed

--- a/_posts/stories/2018-01-01-2017-final.markdown
+++ b/_posts/stories/2018-01-01-2017-final.markdown
@@ -43,7 +43,7 @@ images:
 3. Мы запустили сайт <a href="http://karmelalla.com/" target="_blank">karmelalla.com</a>. За 2017 год я написала <a href="http://karmelalla.com/" target="_blank">37 статей</a>, <a href="http://karmelalla.com/cooking/" target="_blank">8 рецептов</a> и выложила <a href="/gallery/" target="_blank">596 фотографий</a>. Спасибо тебе, Кирилл, за то, что предложил создать сайт, создал его и теперь постоянно улучшаешь и наполняешь его новыми «фишками».
 4. Я <a href="/first-half-marathon" target="_blank">впервые пробежала полумарафон</a> . 21 км за 2 часа 14 минут
 5. Преодолели тысячи миль на машинах и самолетах, и десятки километров пешеходных маршрутов в:
-* <a href="/2017/04/12/los-angeles-p1.html" target="_blank">Лос Анжелес</a>
+* <a href="/2017/04/12/los-angeles-p1.html" target="_blank">Лос-Анжелес</a>
 * Сан-Диего
 * <a href="/olympia-grand-canyon" target="_blank">Лас Вегас</a>
 * <a href="/olympia-grand-canyon" target="_blank">Гранд Каньон</a>
@@ -60,13 +60,13 @@ images:
 8. Начала изучать "фотографию".
 9. Прошла курс по Business English в San Francisco City College.
 10. Два раза съездила в Россию.
-11. Мы привезли Женечку на месяц в Америку и показали ей Нью Йорк, Сан-Франциско, Лос Анжелес и Disneyland.
+11. Мы привезли Женечку на месяц в Америку и показали ей Нью Йорк, Сан-Франциско, Лос-Анжелес и Disneyland.
 12. Мы приняли у себя в гостях Дашу, и она полюбила Сан-Франциско еще больше, чем мы.
 13. Получила калифорнийские водительские права.
 14. Научилась делать так, чтобы дома жили цветы.
 15. Мы начали заниматься йогой, хотя хотелось бы побольше.
 16. Прочитала много книг (гораздо больше, чем раньше).
-17. Познакомилась с тётей из Лос Анжелеса. Тётя Фира, я очень счастлива, что мы нашлись!
+17. Познакомилась с тётей из Лос-Анжелеса. Тётя Фира, я очень счастлива, что мы нашлись!
 
 {% include image src="img_8506.jpg" %}
 
