--- a/_posts/stories/2018-03-06-san-diego.markdown
+++ b/_posts/stories/2018-03-06-san-diego.markdown
@@ -48,11 +48,11 @@ images:
 
 {% include image src="universal_2.jpg" title="Мир Гарри Поттера" %}
 
-Если вы окажетесь в Лос Анжелесе и у вас будет свободный день, подумайте о посещении Universal Studios. А если возникнут вопросы - пишите! Всегда буду рада помочь.
+Если вы окажетесь в Лос-Анжелесе и у вас будет свободный день, подумайте о посещении Universal Studios. А если возникнут вопросы - пишите! Всегда буду рада помочь.
 
 {% include image src="universal_1.jpg" title="Аттракционы!!!" %}
 
-Из Лос Анжелеса мы продолжили свой путь на юг. К вечеру следующего дня, добрались до Сан-Диего. Дорога у нас заняла целый день только потому, что мы постоянно останавливались. Ведь виды и пляжи были потрясающие. Особенно понравился Laguna Beach. Вы скажете, что мы итак живем у океана и зачем нам вообще нужно куда-то ехать. Во всех маленьких городках, находящихся вдоль океана, дышится по-другому. Там очень спокойно и душевно. Хотя я, конечно, совсем не жалуюсь на Сан-Франциско.
+Из Лос-Анжелеса мы продолжили свой путь на юг. К вечеру следующего дня, добрались до Сан-Диего. Дорога у нас заняла целый день только потому, что мы постоянно останавливались. Ведь виды и пляжи были потрясающие. Особенно понравился Laguna Beach. Вы скажете, что мы итак живем у океана и зачем нам вообще нужно куда-то ехать. Во всех маленьких городках, находящихся вдоль океана, дышится по-другому. Там очень спокойно и душевно. Хотя я, конечно, совсем не жалуюсь на Сан-Франциско.
 
 {% include image src="img_0572.jpg" title="Санта-Круз" %}
 
