--- a/_posts/stories/2019-02-14-2018-resume.markdown
+++ b/_posts/stories/2019-02-14-2018-resume.markdown
@@ -4,7 +4,7 @@ title: 2018 год, итоги.
 date: '2019-02-18 20:17:07 -0800'
 original-date: '2019-02-14'
 comments: true
-tags: SanFrancisco ЖизньВСанФранциско Путешествия
+tags: ЖизньВСанФранциско Путешествия Переезд
 thumbnail: thumbnail-2018-results.jpg
 images:
   - 01-2.jpg | Обязательная часть 31 декабря - прогулка на новогоднюю ярмарку
@@ -109,7 +109,7 @@ images:
   - 12-23.jpg | Украшения в центре Сан-Франциско
 ---
 
-Всем привет! Я по вам соскучилась, и по себе, пишущей наши истории, соскучилась тоже.
+Всем привет! Я по вам соскучилась, и по себе, пишущей наши истории, тоже.
 
 2018 год пролетел очень быстро. Правду говорят, первый год после переезда кажется бесконечным, а потом скорость течения времени набирает обороты. 
 <!--separate--> 
@@ -156,7 +156,7 @@ images:
 
 {% include image src="12-3.jpg" title="Закат на о. Мауи" %}
 
-Незадолго до поездки на Гавайи мы переехали в новую квартиру. С переездом с одной квартиры на другую мы столкнулись в первый раз. Это был очень новый опыт для нас, конечно, немного тяжелый. Но результатом мы очень довольны. Полные надежд и счастья, мы встретили 2019 год в домашнем уюте и тепле.
+Незадолго до поездки на Гавайи мы переехали в новую квартиру. С переездом с одной квартиры на другую мы столкнулись в первый раз. Это был очень новый опыт для нас и, конечно, немного тяжелый. Но результатом мы очень довольны. Полные надежд и счастья, мы встретили 2019 год в домашнем уюте и тепле.
 
 {% include image src="12-20.jpg" title="Новый дом" %}
 
