--- a/_posts/stories/2020-04-20-2019-resume.markdown
+++ b/_posts/stories/2020-04-20-2019-resume.markdown
@@ -133,11 +133,11 @@ images:
 
 {% include image src="2019-05-26_17-45-46.jpg" title="26 мая 2019 - Pismo Beach"%}
 
-В июле произошло событие, которое мы очень долго ждали. Мы получили вил на жительство! Больше никаких виз. Ура!
+В июле произошло событие, которое мы очень долго ждали. Мы получили вид на жительство! Больше никаких виз. Ура!
 
 {% include image src="2019-07-26_14-35-28.jpg" title="26 июля 2019"%}
 
-А потом прилетела моя дорогая сестренка. В эти дни особенно ценишь те возможности встречь, которые у были раньше.
+А потом прилетела моя дорогая сестренка. В эти дни особенно ценишь те возможности встреч, которые у нас были раньше.
 
 {% include image src="2019-08-07_11-43-55.jpg" title="07 августа 2019"%}
 
