--- a/_posts/stories/2020-04-20-2019-resume.markdown
+++ b/_posts/stories/2020-04-20-2019-resume.markdown
@@ -154,7 +154,7 @@ images:
 
 {% include image src="2019-11-05_18-45-44.jpg" title="05 ноября 2019"%}
 
-Особый бонус для меня - это то, что на Гавайях время на три часа позже, чем в Сан-Франциско. Мы с легкостью встаем до рассвета и не пропускаем ни один рассвет.
+Особый бонус для меня - это то, что на Гавайях время на три часа позже, чем в Сан-Франциско. Мы с легкостью не пропускаем ни один рассвет.
 
 {% include image src="2019-11-09_12-51-31.jpg" title="09 ноября 2019 - рассвет на острове Кауаи, Гавайи"%}
 
@@ -162,4 +162,4 @@ images:
 
 {% include image src="2019-12-30_15-25-00.jpg" title="30 декабря 2019"%}
 
-31 декабря в полночь мы приземлились в Сан-Франциско.я
+31 декабря в полночь мы приземлились в Сан-Франциско. 
