--- a/_posts/stories/2020-04-20-2019-resume.markdown
+++ b/_posts/stories/2020-04-20-2019-resume.markdown
@@ -12,7 +12,7 @@ images:
   - 2019-01-12_14-50-21.jpg | 12 января 2019 - ездили в гости
   - 2019-01-13_17-08-35.jpg | 13 января 2019 - едем с девочками домой с девичника
   - 2019-01-26_00-09-35.jpg | 26 января 2019 - родители присылали зимние фото, а мы скучали
-  - 2019-01-30_19-42-54.jpg | 30 января 2019 - ходили на цирк Дю Солей, шоу "Volta"
+  - 2019-01-30_19-42-54.jpg | 30 января 2019 - ходили на цирк Дю Солей, шоу Volta
   - 2019-02-09_15-09-39.jpg | 09 февраля 2019 - гуляли
   - 2019-02-16_19-43-49.jpg | 16 февраля 2019 - во время прогулок получали неожиданные подарки
   - 2019-02-18_14-02-05.jpg | 18 февраля 2019 - снова гуляли
