--- a/_posts/stories/2020-04-20-2019-resume.markdown
+++ b/_posts/stories/2020-04-20-2019-resume.markdown
@@ -27,8 +27,8 @@ images:
   - 2019-04-20_17-36-38.jpg | 20 апреля 2019 - на территории Stanford University
   - 2019-04-21_17-54-43.jpg | 21 апреля 2019 - ботанический сад в Сан-Франциско
   - 2019-04-23_11-54-16.jpg | 23 апреля 2019 - лучшего вида на город и мост просто не существует.Особенно, когда на фото родители. Battery Spencer
-  - 2019-04-23_20-50-11.jpg | 23 апреля 2019 - мы вырвались на мюзикл "Чарли и Шоколадная Фабрика"
-  - 2019-04-23_20-50-45.jpg | - мы вырвались на мюзикл "Чарли и Шоколадная Фабрика"
+  - 2019-04-23_20-50-11.jpg | 23 апреля 2019 - мы вырвались на мюзикл Чарли и Шоколадная Фабрика
+  - 2019-04-23_20-50-45.jpg | - мы вырвались на мюзикл Чарли и Шоколадная Фабрика
   - 2019-04-24_15-46-09.jpg | 24 апреля 2019 - Sutro Baths
   - 2019-04-24_17-49-50.jpg | 24 апреля 2019 - Ocean Beach
   - 2019-04-25_15-29-32.jpg | 25 апреля 2019 - викторианские домики - одна из достопримечательностей Сан-Франциско, Painted Ladies
@@ -77,7 +77,7 @@ images:
   - 2019-09-20_16-21-05.jpg | 20 сентября 2019 - и снова гости из Питера
   - 2019-10-14_14-00-23.jpg | 14 октября 2019 - немного продолжала бегать
   - 2019-11-04_08-53-42.jpg | 04 ноября 2019 - остров Кауаи, Гавайи
-  - 2019-11-06_19-31-51.jpg | 06 ноября 2019 - традиционный Гавайский танец "Хула". Остров Кауаи, Гавайи
+  - 2019-11-06_19-31-51.jpg | 06 ноября 2019 - традиционный Гавайский танец Хула. Остров Кауаи, Гавайи
   - 2019-11-07_08-25-03.jpg | 07 ноября 2019 - остров Кауаи, Гавайи
   - 2019-11-07_08-46-37.jpg | 07 ноября 2019 - остров Кауаи, Гавайи
   - 2019-11-07_16-06-40.jpg | 07 ноября 2019 - остров Кауаи, Гавайи
@@ -98,7 +98,7 @@ images:
   - 2019-12-27_15-35-53.jpg | 27 декабря 2019 - Miami Beach
   - 2019-12-28_12-57-16.jpg | 28 декабря 2019 - Bayfront Park, Майами
   - 2019-12-28_13-32-31.jpg | 28 декабря 2019 - Bayfront Park, Майами
-  - 2019-12-31_10-57-56.jpg | 31 декабря 2019 - "Miami's nice"
+  - 2019-12-31_10-57-56.jpg | 31 декабря 2019 - Miami's nice
   - 2019-12-31_13-00-55.jpg | 31 декабря 2019 - перед отлетом
 ---
 
