last fixes for 2019

--- a/_posts/stories/2020-04-20-2019-resume.markdown
+++ b/_posts/stories/2020-04-20-2019-resume.markdown
@@ -84,8 +84,7 @@ images:
   - 2019-11-07_20-02-54.jpg | 07 ноября 2019 - остров Кауаи, Гавайи
   - 2019-11-08_13-25-42.jpg | 08 ноября 2019 - остров Кауаи, Гавайи
   - 2019-11-08_16-34-18.jpg | 08 ноября 2019 - Каньон Waimea, остров Кауаи, Гавайи
-  - 2019-11-09_10-20-56.jpg | 09 ноября 2019 - Кирилл поучаствовал в забеге на острове Кауаи, Гавайи
-  - 2019-11-11_09-11-04.jpg | 11 ноября 2019 - а просто побегала на рассвете
+  - 2019-11-11_09-11-04.jpg | 11 ноября 2019 - побегала на рассвете
   - 2019-11-13_09-07-32.jpg | 13 ноября 2019 - и еще один рассвет на Гавайях
   - 2019-11-20_16-21-25.jpg | 20 ноября 2019 - а это мы уже вернулись в Калифорнию
   - 2019-11-29_14-37-06.jpg | 29 ноября 2019 - приближение Нового года
@@ -145,7 +144,7 @@ images:
 
 {% include image src="2019-08-19_13-48-01.jpg" title="19 августа 2019 - Сан-Диего, La Jolla"%}
 
-Следующей поездкой 2019 года стало наше путешествие на Гавайи. Если помните, в 2018 году мы летали на остров Мауи. Нам тогда очень понравилось, остров оставил самые душевные воспоминания. 
+Следующей поездкой 2019 года стало наше путешествие на Гавайи. Если помните, в 2018 году мы летали на остров Мауи. Нам тогда очень понравилось, остров оставил самые душевные воспоминания.
 Гавайи состоят из множества островов и в этом году наш выбор пал на Кауаи. Он немного более "дикий", но и более зеленый чем Мауи. Красота невероятная, куда не посмотри.
 
 {% include image src="2019-11-04_08-49-55.jpg" title="04 ноября 2019"%}
